# ogle

./: .gitignore  .gitmodules  CMakeLists.txt  Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  README.md  _save.json  imgui.ini  main.cpp  scene.json  script.as
Debug/: Project1.ilk  Project1.vcxproj.FileListAbsolute.txt  vc142.idb
Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cmake/: FindFBX.cmake  FindFMOD.cmake  FindGLM.cmake  FindThreads.cmake
data/: script.as
dependencies/: CMakeLists.txt
dependencies/fmod/examples/: play_sound.cpp
dependencies/fmod/examples/make/: 3d  3d.makefile  play_sound  play_sound.makefile  record
dependencies/fmod/lib/x86_64/: libfmod.so.11  libfmodL.so.11
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
include/: engine.hpp
include/graphics/: camera.hpp  deferred.hpp  device.hpp  gizmo.hpp  graphics_device.hpp  light.hpp  material.hpp  mesh.hpp  shader.hpp  sprite.hpp  texture.hpp  ui.hpp
include/graphics/OpenGL/: Buffer.hpp  OpenGL.hpp  VertexArray.hpp
include/graphics/ui/: Editor.hpp  editor.hpp
include/math/: pick.hpp  vector.hpp
include/platform/: info.hpp  linux.hpp
include/scene/: camera.hpp  object.hpp  scene.hpp
include/script/: device.hpp  reference.hpp  script.hpp  script_device.hpp
include/script/types/: functions.hpp  glm_as.hpp
include/sound/: device.hpp  sound2d.hpp  sound3d.hpp  sound_device.hpp  soundlistener.hpp
include/system/: clock.hpp  config.hpp  extensions.hpp  filesystem.hpp  input.hpp  log.hpp  timer.hpp
shaders/: diffuse.fs  diffuse.vs  gbuffer.fs  gbuffer.vs  imgui_f.glsl  imgui_v.glsl  sprite.fs  sprite.vs
sources/graphics/: CMakeLists.txt  camera.cpp  deferred.cpp  device.cpp  gizmo.cpp  grahpics_device.cpp  light.cpp  material.cpp  mesh.cpp  shader.cpp  sprite.cpp  texture.cpp  ui.cpp
sources/graphics/ui/: editor.cpp
sources/platform/: CMakeLists.txt  info.cpp  linux.cpp
sources/scene/: CMakeLists.txt  camera.cpp  object.cpp  scene.cpp
sources/script/: CMakeLists.txt  device.cpp  reference.cpp  script.cpp  script_device.cpp
sources/script/types/: functions.cpp  scriptstdstring.cpp
sources/sound/: CMakeLists.txt  device.cpp  sound2d.cpp  sound3d.cpp  sound_device.cpp  soundlistener.cpp
sources/system/: CMakeLists.txt  clock.cpp  config.cpp  filesystem.cpp  input.cpp  log.cpp  timer.cpp
